--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       HTTP_SERVER_PORT: $HTTP_SERVER_PORT
       SSE_TTL: $SSE_TTL
       TG_API_URL: $TG_API_URL
+      JWT_SECRET_TTL: $JWT_SECRET_TTL
+      JWT_SECRET: $JWT_SECRET
     ports:
       - $HTTP_SERVER_PORT:$HTTP_SERVER_PORT
 
