feat: user list filter

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,5 @@
 FROM golang:1.24-alpine AS builder
 
-# # Установка tzdata
-# # RUN apt-get update && apt-get install -y tzdata
-
-# # Установка переменной окружения для таймзоны (опционально)
-# # RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 WORKDIR /app
 COPY ./src .
@@ -13,6 +8,11 @@ RUN go mod tidy && go build -o main .
 
 FROM alpine:latest
 WORKDIR /root/
+
+# Установим нужные пакеты
+RUN apk add --no-cache tzdata
+
+ENV TZ=Asia/Tashkent
 
 COPY --from=builder /app/main .
 
