--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       TG_API_URL: $TG_API_URL
       JWT_SECRET_TTL: $JWT_SECRET_TTL
       JWT_SECRET: $JWT_SECRET
+      GRPC_ADDR: $GRPC_HOST:$GRPC_PORT
     ports:
       - $HTTP_SERVER_PORT:$HTTP_SERVER_PORT
 
