--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  server:
+  admin-panel-server:
     build: ./server
     container_name: panel_server
     networks:
@@ -19,8 +19,9 @@ services:
       JWT_SECRET_TTL: $JWT_SECRET_TTL
       JWT_SECRET: $JWT_SECRET
       GRPC_ADDR: $GRPC_HOST:$GRPC_PORT
+      ALLOW_ORIGINS: $ALLOW_ORIGINS
     ports:
-      - $HTTP_SERVER_PORT:$HTTP_SERVER_PORT
+      - "127.0.0.1:$HTTP_SERVER_PORT:$HTTP_SERVER_PORT"
 
 volumes:
   uploads:
